Added a little react router, no switch because it's not needed

--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,18 @@
 .sideBarButton:hover {
   cursor: pointer;
 }
+
+.Link {
+  text-decoration: none;
+  color: black;
+}
+
+.Link:hover {
+  text-decoration: none;
+  color: black;
+}
+
+.link:visited {
+  text-decoration: none;
+  color: black;
+}
